--- a/index.css
+++ b/index.css
@@ -1,53 +1,74 @@
 body {
- margin: 0%;
+  margin: 0%;
 
 }
-.sherek{
+
+.sherek {
   height: 400px;
 }
-h1{
+
+h1 {
   font-size: 5em;
   color: white;
 }
-h2{
+
+h2 {
   font-size: 3em;
   color: rgb(255, 255, 255);
 }
-p{
+
+p {
   font-size: 2em;
   color: white;
 }
-h3{
+
+h3 {
   color: black;
 }
-a{
-    color: brown;
-    font-size: 3em;
-   font-family: 'Nanum Myeongjo', serif;
+
+#samurai{  height: 390px;
+  border-radius: 5%;}
+a {
+  color: rgb(226, 0, 0);
+  font-size: 3em;
+  font-family: 'Nanum Myeongjo', serif;
+
 
 }
+
 .a {
   text-align: center;
   align-items: center;
   justify-content: center;
   background-color: #9E7759;
 }
+.veja{
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  color: #ff0000;
+}
+
 .abertura {
   background-color: #7A3B27;
 
 }
+
 .titulo {
   display: flex;
- flex-direction: row;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   text-align: center;
- 
+
 }
-.coluna{
+
+.coluna {
   display: flex;
   flex-direction: column;
 }
+
 .sobre {
   background-color: #8F4C2F;
   display: flex;
@@ -55,35 +76,49 @@ a{
   align-items: center;
   justify-content: center;
 }
+
 .cabelo {
   background-color: #9E7759;
- display: flex;
- justify-content: flex-start;
-align-items: start;
-flex-direction: column;
-
-
-  
-  
+column-gap: 10px;
+text-align: center;
 }
+
 .lista {
-position: relative;
-  top: 5px;
-  left: 10px;
+ display: flex;
+ flex-direction: row;
+ align-items: center;
+ justify-content: space-around;
+gap: 20px;
+
+}
+
+.img_lista {
+  height: 500px;
+ border-radius: 5%;
  
 }
-.img_lista{
-  height: 70%;
 
-  border-radius: 5%;
-}
-.barbearias{
+.barbearias {
   background-color: #A85D31;
-text-align: center;
+  text-align: center;
 
 }
-.img_barba{
+
+.img_barba {
   height: 250px;
   border-radius: 5%;
- 
+
+}
+
+.butao {
+  text-align: center;
+  border-radius: 0.4rem;
+  background-color: #ff0000;
+  padding: 0.5rem 1rem;
+  color: #000000;
+  text-decoration: none;
+  font-family: 'Belanosima', sans-serif;
+
+  width: 565px;
+
 }
